Problema de padding corrigido

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <header>
 
         <h1>Curiosidades de Tecnologia</h1>
-        <p>Tudo aquilo que você sempre quis saber sobre o mundo tech,em um único lugar</p>
+        <p>Tudo aquilo que você sempre quis saber sobre o mundo tech em um único lugar</p>
 
     </header>
 
     <nav>
         <a href="#">Home</a>
         <a href="#">Noticias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale conosco</a>
+        <a href="#">Contato</a>
     </nav>
 
     <main>
