--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" class="externo">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
-
-            <source media="(max-width: 670px)" srcset="imagens/san-droid-pq.png">
-            <picture><img src="imagens/dan-droids.png" alt="Primeiro mascote do Android"></picture>
+            <picture>
+            <source media="(max-width: 670px)" srcset="imagens/dan-droids-pq.png">
+            <img src="imagens/dan-droids.png" alt="Primeiro mascote do Android"></picture>
 
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
@@ -43,8 +43,9 @@
 
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" target="_blank" class="externo">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
-             <source media="(max-width:670px )" srcset="imagens/irina-blok-pq.png">
-             <picture><img src="imagens/irina-blok.jpg" alt="Irina-blok criadora do Bugdroid"></picture>
+            <picture>
+             <source media="(max-width:670px )" srcset="imagens/irina-blok-pq.jpg">
+           <img src="imagens/irina-blok.jpg" alt="Irina-blok criadora do Bugdroid"></picture>
 
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
